Reverted use of Java 17 features.
Cannot compile to Java 11 otherwise.